# awcWideoBot

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  requirements.txt
.github/workflows/: image.yml  main.yml
discord_bot/: main.py
src/: main.rs
terraform/: README.md  main.tf  versions.tf
terraform/data/: cloud-init.sh
