[package]
name = "awc-wideo-bot"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
anyhow = "1.0.72"
ed25519-dalek = "2.0.0"
hex = "0.4.3"
lambda_http = { version = "0.8.1", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0.183"
serde_json = "1.0.105"
tempfile = "3.8.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
ureq = { version = "2.7.1", features = ["json"] }
