[package]
name = "awc-wideo-bot"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
anyhow = "1.0.94"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
lambda_http = { version = "0.13.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.13.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = "1.0.216"
serde_json = "1.0.133"
tempfile = "3.14.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
ureq = { version = "2.12.1", features = ["json"] }
